fix footer h6 margin and spacing

--- a/css/ao-styling.css
+++ b/css/ao-styling.css
@@ -36,6 +36,7 @@ body {
 }
 footer {
 	/*border-top: 1px solid #eee;*/
+	margin-top: 60px;
 	padding: 30px;
 	color: black !important;
 	background-color: #eee;
